--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
             </a>
             <a href="#">
                 <i class="fi fi-brands-facebook-messenger"></i>
+                <div class="nav-dot-bl"><p>3</p></div>
             </a>
             <a href="#">
                 <i class="fi fi-sr-bell"></i>
+                <div class="nav-dot-bl"><p>1</p></div>
             </a>
-            <span class="profile"></span>
+            <span class="profile">
+                <div class="nav-dot-bl-pf"><p>.</p></div>
+            </span>
 
         </div>
     </nav>
@@ -360,8 +364,53 @@
 
     
     <div class="right-panel">
+        <div class="name-tags"><p>Sponsored</p></div>
+        <div class="sponsored">
+            <div class="sponsored-sections">
+                <img src="./images/hokage.jpg">
+                <div class="descri">
+                    <div class="descri-top">
+                        <p>💞 Miễn Phí Svip3</p>
+                    </div>
+                    <div class="descri-bot">
+                        <p>hokage.com.vn</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsored-sections">
+                <img src="./images/gearvn.png">
+                <div class="descri">
+                    <div class="descri-top">
+                        <p>Gearvn</p>
+                    </div>
+                    <div class="descri-bot">
+                        <p>gearvn.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="line">
+        <div class="name-tags"><p>Friend requests</p></div>
+        <div class="Friend-requests">
+            <img src="./images/fr-rq.jpg">
+            <div class="avt-fr-rq">
+                <div class="fr-rq-dc">
+                    <p><b>Lan Huong</b></p>
+                    <div class="fr-rq-dc-bot">
+                        <div class="fr-1"><img src="./images/fr-rq-bl-1.jpg"></div>
+                        <div class="fr-2"><img src="./images/fr-rq-bl-2.jpg"></div>
+                        <span>3 mutual friends</span>
+                    </div>
+                </div>
+                <div class="button-below-fr-rq">
+                    <div class="butt-1"><p>Comfirm</p></div>
+                    <div class="butt-2"><p>Delete</p></div>           
+                </div>
+            </div>
+        </div>
+        <hr class="line">
         <div class="Birthdays">
-            <h4>Birthdays</h4>
+            <div class="name-tags"><p>Birthdays</p></div>
             <a class='birthdaybutton'>
                 <div class="obj">
                     <img src="./images/present.png" alt="">
@@ -378,54 +427,61 @@
         </div>
         <hr class="line">
         <div class="friends-section">
-            <h4>Friends</h4>
+            <div class="name-tags"><p>Contacts</p></div>
             <a class='friend' >
                 <div class="avt-person-left-panel">
                     <img src="./images/friend1.webp" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 1</b></p>
+                <p class="name"><b>Angelina Jolie</b></p>
             </a>
 
             <a class='friend'>
                 <div class="avt-person-left-panel">
                     <img src="./images/friend2.webp" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 2</b></p>
+                <p class="name"><b>Jennifer Lawrence</b></p>
             </a>
 
             <a class="friend">
                 <div class="avt-person-left-panel">
                     <img src="./images/friend3.jpg" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 3</b></p>
+                <p class="name"><b>Emily Blunt</b></p>
             </a>
 
             <a class="friend" >
                 <div class="avt-person-left-panel">
                     <img src="./images/friend4.jpg" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 4</b></p>
+                <p class="name"><b>Chris Evan</b></p>
             </a>
 
             <a class="friend">
                 <div class="avt-person-left-panel">
                     <img src="./images/friend5.jpg" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 5</b></p>
+                <p class="name"><b>Jung Kook</b></p>
             </a>
 
             <a class="friend" >
                 <div class="avt-person-left-panel">
                     <img src="./images/friend6.jpg" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 6</b></p>
+                <p class="name"><b>Henry Cavill</b></p>
             </a>
 
             <a class="friend">
                 <div class="avt-person-left-panel">
                     <img src="./images/friend7.jpg" alt="">
+                    <div class="dot-bl"><p>.</p></div>
                 </div>
-                <p class="name"><b>friend 7</b></p>
+                <p class="name"><b>Anne Hathaway</b></p>
             </a>
             
         </div>
