--- a/index.html
+++ b/index.html
@@ -143,13 +143,17 @@
         </div>
 
         <div class="links">
-            <a href="#">Privacy</a> <span class="dot"></span>
-            <a href="#">Terms</a> <span class="dot"></span>
-            <a href="#">Advertising</a> <span class="dot"></span>
-            <a href="#">Ad Choice</a> <span class="dot"></span><br>
-            <a href="#">Cookies</a> <span class="dot"></span>
-            <a href="#">More</a> <span class="dot"></span>
-            <a href="#">Meta c 2023</a> <span class="dot"></span>
+            <div class="c4">
+                <p>Privacy</p> <span class="dot">.</span>
+                <p>Terms</p> <span class="dot">.</span>
+                <p>Advertising</p> <span class="dot">.</span>
+                <p>Ad Choice</p> <span class="dot">.</span>
+            </div>  
+            <div class="c3l">  
+                <p>Cookies</p> <span class="dot">.</span>
+                <p>More</p> <span class="dot">.</span>
+                <p>Meta c 2023</p> <span class="dot">.</span>
+            </div>
         </div>
 
     </div>
