--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
 
             <div class="story">
-                <img src="./images/story2.jpeg" alt="2's story">
+                <img src="./images/story2.jpg" alt="2's story">
                 <div class="avt-in-str-set">
                     <img src="./images/2-avt.jpg" alt="2-avt">
                 </div>
