--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                     </div>
                     <div class="like-descrip-right">
                         <p>8</p>
-                        <i class="fi fi-sr-comment-dots"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1450px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
                         <p>1</p>
-                        <i class="fa-solid fa-share"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1468px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
                     </div>
                 </div>
                 <hr class="line">
@@ -320,9 +320,9 @@
                     </div>
                     <div class="like-descrip-right">
                         <p>121</p>
-                        <i class="fi fi-sr-comment-dots"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1450px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; color:#65676B; "></i>
                         <p>32</p>
-                        <i class="fa-solid fa-share"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1468px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
                     </div>
                 </div>
                 <hr class="line">
@@ -384,9 +384,9 @@
                     </div>
                     <div class="like-descrip-right">
                         <p>563</p>
-                        <i class="fi fi-sr-comment-dots"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1450px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
                         <p>120</p>
-                        <i class="fa-solid fa-share"></i>
+                        <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1468px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
                     </div>
                 </div>
                 <hr class="line">
@@ -404,8 +404,9 @@
                         <span>Send</span>
                     </div>
                 </div>
-                <!-- <hr class="line">
-                <div class="cmt-bl-post">
+                <hr class="line">
+                <!-- <div class="cmt-bl-post">
+                    <i data-visualcompletion="css-img" class="x1b0d499 x1d69dk1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yB/r/yb5cIhbXD8Z.png&quot;); background-position: 0px -1450px; background-size: 26px 1514px; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block;"></i>
 
 
 
