--- a/index.html
+++ b/index.html
@@ -24,30 +24,44 @@
 <body>
     <nav>
         <div class="nav-left">
-            <i class="fi fi-brands-facebook"></i>
+            <div class="logoFBnavleft"><img src="./images/fblg.svg"></div>
             <div class="search-section">
                 <i class="fa-solid fa-magnifying-glass" style="color: #585c65;"></i>
                 <input type="text" placeholder="Search Facebook" >
             </div>
         </div>
         <div class="nav-middle">
-            <a href="#" class="active-1">
-                <i class="fi fi-sr-house-window"></i>
-            </a>
+            <ul>
+                <li>
+                    <a href="#" class="active-1">
+                        <i class="fi fi-sr-house-window"></i>
+                    </a>
+                </li>
 
-            <a href="#" class="active-2">
-                <i class="fi fi-rr-play-alt"></i>
-            </a>
+                <li>
+                    <a href="#" class="active-2">
+                        <i class="fi fi-rr-play-alt"></i>
+                    </a>
+                </li>
 
-            <a href="#" class="active-3">
-                <i class="fi fi-rr-shop"></i>
-            </a>
-            <a href="#" class="active-4">
-                <i class="fi fi-rr-users-alt"></i>
-            </a>
-            <a href="#" class="active-5">
-                <i class="fi fi-rs-gamepad"></i>
-            </a>
+                <li>
+                    <a href="#" class="active-3">
+                        <i class="fi fi-rr-shop"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="active-4">
+                        <i class="fi fi-rr-users-alt"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="active-5">
+                        <i class="fi fi-rs-gamepad"></i>
+                    </a>
+                </li>
+            </ul>    
         </div>
 
         <div class="nav-right">
@@ -104,7 +118,7 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa-solid fa-chevron-down"></i></a>
+                    <div class="down-chn"><a href="#"><i class="fa-solid fa-chevron-down"></i></a></div>
                     <p>See more</p>
                 </li>
 
@@ -135,7 +149,7 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa-solid fa-chevron-down"></i></a>
+                    <div class="down-chn"><a href="#"><i class="fa-solid fa-chevron-down"></i></a></div>
                     <p>See more</p>
                 </li>
 
