--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                             </div>
                             <div class="cmt-ct">
                                 <div class="cmt-ct-top">
-                                    <div class="name"><a><b>Long Nhật</b></a></div>
-                                    <div class="cmt-text"><p><b>Quỳnh Nguyễn </b>Nhìn như mấy hạt đậu phộng mới luộc 😀😀😀😀😀</p></div>
+                                    <div class="name"><a><b>Hồng Anh</b></a></div>
+                                    <div class="cmt-text"><p>Đáp án là B</p></div>
                                 </div>
                                 <div class="cmt-ct-bot">
                                     <ul>
