--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                                         <input type="checkbox">
                                     </div>
                                 </div>
-                                <div class="name-1st-choice"><span class="name-choice">NEU</span></div>
+                                <div class="name-1st-choice"><span class="name-choice-1"><b>NEU</b></span></div>
                                 <div class="result-percent-voted">
                                     <span>14%</span>
                                     <i class="fa-solid fa-chevron-right" style="color: #6b6b6b;"></i>
@@ -791,7 +791,7 @@
                                 </div>
                                 <div class="name-2nd-choice">
                                     <span class="added-by">Added by <b>Nguyễn Đình Thiên Phúc </b></span>
-                                    <span class="name-choice">KHTN HCM</span>
+                                    <span class="name-choice"><b>KHTN HCM</b></span>
                                 </div>
                                 <div class="result-percent-voted">
                                     <span>26%</span>
@@ -809,7 +809,7 @@
                                 </div>
                                 <div class="name-3rd-choice">
                                     <span class="added-by">Added by <b>Bóng Đá Phủi </b></span>
-                                    <span class="name-choice">TDT</span>
+                                    <span class="name-choice"><b>TDT</b></span>
                                 </div>
                                 <div class="result-percent-voted">
                                     <span>3%</span>
@@ -828,7 +828,7 @@
                                 </div>
                                 <div class="name-4th-choice">
                                     <span class="added-by">Added by <b>Phan Nhân Tuấn Kiệt </b></span>
-                                    <span class="name-choice">FPTU fuda</span>
+                                    <span class="name-choice"><b>FPTU fuda</b></span>
                                 </div>
                                 <div class="result-percent-voted">
                                     <span>3%</span>
@@ -847,7 +847,7 @@
                                 </div>
                                 <div class="name-5th-choice">
                                     <span class="added-by">Added by <b>Ngô Thế Quyền </b></span>
-                                    <span class="name-choice">HCMUET</span>
+                                    <span class="name-choice"><b>HCMUET</b></span>
                                 </div>
                                 <div class="result-percent-voted">
                                     <span>32%</span>
@@ -871,8 +871,8 @@
                         <p>11</p>
                     </div>
                     <div class="like-descrip-right">
-                        <p>133 Votes</p>
-                        <p>13 comments</p>
+                        <p>133 Votes    1</p>
+                        <p>3 Comments</p>
                     </div>
                 </div>
                 <hr class="line">
